Mobile and Desktop design

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="cards">
 
-            <div class="card">
+            <div class="card Supervisor">
                 <div class="flex_left">
                     <h2 class="card_title">Supervisor</h2>
                     <p class="crad_description">
@@ -47,31 +47,33 @@
                 </div>
             </div>
 
-            <div class="card">
-                <div class="flex_left">
-                    <h2 class="card_title">Team Builder</h2>
-                    <p class="crad_description">
-                    Scans our talent network to create the optimal team for your project
-                    </p>
-                </div>
-                <div class="flex_right">
+            <div class="middle_column">
+                <div class="card middle_card Team_Builder">
+                    <div class="flex_left">
+                        <h2 class="card_title">Team Builder</h2>
+                        <p class="crad_description">
+                        Scans our talent network to create the optimal team for your project
+                        </p>
+                    </div>
+                    <div class="flex_right">
                     <img src="images/icon-team-builder.svg" alt="lens icon">
+                    </div>
                 </div>
-            </div>
 
-            <div class="card">
-                <div class="flex_left">
-                    <h2 class="card_title">Karma</h2>
-                    <p class="crad_description">
-                    Regulary evaluates our talent to ensure quality 
-                    </p>
-                </div>
-                <div class="flex_right">
+                <div class="card middle_card Karma">
+                    <div class="flex_left">
+                        <h2 class="card_title">Karma</h2>
+                        <p class="crad_description">
+                        Regulary evaluates our talent to ensure quality 
+                        </p>
+                    </div>
+                    <div class="flex_right">
                     <img src="images/icon-karma.svg" alt="lens icon">
+                    </div>
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card Calculator">
                 <div class="flex_left">
                     <h2 class="card_title">Calculator</h2>
                     <p class="crad_description">
